# MileStone2

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFS.cpp  BestFS.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MatrixSearchable.cpp  MatrixSearchable.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  SafeQueue.cpp  SafeQueue.h  Searchable.h  Searcher.h  SearcherAdapter.h  Server.h  Solver.h  State.cpp  State.h  StringReverser.cpp  StringReverser.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
